indiv closer. issues with title centering on mobile and title placement in desktop

--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -28,6 +28,7 @@ footer {
 
     @media (min-width : 382px) {
         padding: 4rem 2rem 0 2rem;
+        padding-top: 50px;
     }
 }
 
